--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "alexa-sdk": "^1.0.7"
   },
   "scripts": {
-    "test": "npm install -g standard && standard && node test/testflow.js && npm uninstall -g standard"
+    "test": "node test/testflow.js testDialogs.txt"
   },
   "author": "binhonglee",
   "license": "MIT",
