--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "test"]
 	path = test
-	url = git@github.com:robm26/testflow.git
+	url = https://github.com/binhonglee/testflow.git
+	branch = checkExists
